add exodus to solomon vars and verses

--- a/timeline.html
+++ b/timeline.html
@@ -83,7 +83,7 @@
 						function render() {
 
 							counter += 10;
-							if( counter === 500 ) { 
+							if( counter == 500 ) { 
 								move = true;
 							} else if ( counter == 700 ) { 
 								setVerseSum(gen5_6, sums[1]);	
@@ -179,8 +179,6 @@
 								move = true;
 							} else if ( counter == 12200 ) {  
  								setVerseSum( gen21_5, sums1[9] );
-
-
 							} else if ( counter == 12500 ) {
 								move = true;
 							} else if ( counter == 12700 ) {  
@@ -204,9 +202,7 @@
 							} else if ( counter == 15000 ) {
 								move = true;
 							} else if ( counter == 15200 ) {  
- 								setVerseSum( gen45_7, "N" );
- 							
-
+ 								setVerseSum( gen45_7, "N" ); 						
 							} else if ( counter == 15500 ) {
 								move = true;
 							} else if ( counter == 15700 ) {  
@@ -231,7 +227,6 @@
 								move = true;
 							} else if ( counter == 18200 ) {  
  								setVerseSum( gal3_16, "N" );
-
 							} else if ( counter == 18500 ) {
 								move = true;
 							} else if ( counter == 18700 ) {  
