--- a/timeline.html
+++ b/timeline.html
@@ -43,12 +43,12 @@
 						function setMeshText( txt, color, type ){
 							
 							var material = new THREE.MeshBasicMaterial( { color: color } );
-							var shape = font.generateShapes( txt, 50, 2 );
+							var shape = font.generateShapes( txt, 50 );
 							var geometry = new THREE.ShapeGeometry( shape );
 							var objTM = new THREE.Mesh( geometry, material );
-							if ( type == "title" ) { objTM.position.set( -700, 400, -1000 ); }
+							if ( type == "title" ) { objTM.position.set( -700, 500, -1000 ); }
 							else if ( type == "verse" ) { objTM.position.set( -700, 200, -1000 ); }
-							else if ( type == "number" ) { objTM.position.set( 160, 400, -1000 ); }
+							else if ( type == "number" ) { objTM.position.set( -700, 350, -1000 ); }
 							
 							return objTM;
 						}
@@ -71,9 +71,9 @@
 							scene.add( titleTM );							
 						}
 
-						titleTM = setMeshText( "Years from Adam to Flood = ", color1, "title" );
+						titleTM = setMeshText( titles[0], color1, "title" );
 						verseTM = setMeshText( gen5_3, color0, "verse" );
-						sumTM = setMeshText( sums[0], color0, "number" );
+						sumTM = setMeshText( sums0[0], color0, "number" );
 						scene.add( titleTM );
 						scene.add( verseTM );
 						scene.add( sumTM );
@@ -83,48 +83,54 @@
 						function render() {
 
 							counter += 10;
+							///////////////////////////////
+							// Years from Adam to the Flood
+							///////////////////////////////
 							if( counter == 500 ) { 
 								move = true;
 							} else if ( counter == 700 ) { 
-								setVerseSum(gen5_6, sums[1]);	
+								setVerseSum(gen5_6, sums0[1]);	
 							} else if ( counter == 1000 ) {
 								move = true;
 							} else if ( counter == 1200 ) {  
-								setVerseSum(gen5_9, sums[2]);
+								setVerseSum(gen5_9, sums0[2]);
 							} else if ( counter == 1500 ) {
 								move = true;
 							} else if ( counter == 1700 ) {  
-								setVerseSum(gen5_12, sums[3]);	
+								setVerseSum(gen5_12, sums0[3]);	
 							} else if ( counter == 2000 ) {
 								move = true;
 							} else if ( counter == 2200 ) {  
-								setVerseSum(gen5_15, sums[4]);
+								setVerseSum(gen5_15, sums0[4]);
 							} else if ( counter == 2500 ) {
 								move = true;
 							} else if ( counter == 2700 ) {  
-								setVerseSum(gen5_18, sums[5]);
+								setVerseSum(gen5_18, sums0[5]);
 							} else if ( counter == 3000 ) {
 								move = true;
 							} else if ( counter == 3200 ) {  
-								setVerseSum(gen5_21, sums[6]);
+								setVerseSum(gen5_21, sums0[6]);
 							} else if ( counter == 3500 ) {
 								move = true;
 							} else if ( counter == 3700 ) {  
-								setVerseSum(gen5_25, sums[7]);
+								setVerseSum(gen5_25, sums0[7]);
 							} else if ( counter == 4000 ) {
 								move = true;
 							} else if ( counter == 4200 ) {  
-								setVerseSum(gen5_28, sums[8]);
+								setVerseSum(gen5_28, sums0[8]);
 							} else if ( counter == 4500 ) {
 								move = true;
 							} else if ( counter == 4700 ) {  
- 								setVerseSum(gen7_6, sums[9]);
+ 								setVerseSum(gen7_6, sums0[9]);
 							} else if ( counter == 5000 ) {
 								move = true;
 							} else if ( counter == 5200 ) {  
 
 							} else if (counter == 5700) {
-								setTitle( "Years from Flood to Exodus = " );
+							/////////////////////////////////
+							// Years from the Flood to Exodus								
+							/////////////////////////////////
+								setTitle( titles[1] );
 								setVerseSum(gen11_10, sums1[0]); 								
 							} else if ( counter == 6000 ) {
 								move = true;
@@ -154,7 +160,6 @@
 								move = true;
 							} else if ( counter == 9200 ) {  
  								setVerseSum( gen11_24, sums1[7] );
-
 							} else if ( counter == 9500 ) {
 								move = true;
 							} else if ( counter == 9700 ) {  
@@ -251,8 +256,48 @@
 								move = true;
 							} else if ( counter == 21200 ) {  
 								setVerseSum( sog_3, sums1[13] );
+							} else if ( counter == 21500 ) {
+								move = true;
+							} else if ( counter == 21700 ) {  
+								//setVerseSum( sog_2, "N" );
+							} else if ( counter == 22000 ) {
+								//move = true;
+							} else if ( counter == 22200 ) {  
+							///////////////////////////////
+							// Years from Exodus to Solomon
+							///////////////////////////////	
+								setTitle( titles[2] );
+								setVerseSum(onekng6_1, sums2[0]); 
+							} else if ( counter == 22500 ) {
+								move = true;
+							} else if ( counter == 22700 ) {  
+								setVerseSum( onekng6_38, sums2[1] );
+							} else if ( counter == 23000 ) {
+								move = true;
+							} else if ( counter == 23200 ) {  
+								setVerseSum( onekng11_42, "N" );
+							} else if ( counter == 23500 ) {
+								move = true;
+							} else if ( counter == 23700 ) {  
+								setVerseSum( solm_1, "N" );
+							} else if ( counter == 24000 ) {
+								move = true;
+							} else if ( counter == 24200 ) {  
+								setVerseSum( solm_2, "N" );
+							} else if ( counter == 24500 ) {
+								move = true;
+							} else if ( counter == 24700 ) {  
+								setVerseSum( solm_3, sums2[2] );
 							}
-
+							////////////////////////
+							// From Solomon to Exile
+							////////////////////////
+							////////////////////////////////////
+							// From Exile to Start of Common Era
+							////////////////////////////////////
+							////////////////////////////////////
+							// From Start of Common Era to Today
+							////////////////////////////////////
 							if ( move ) { verseTM.position.x += -7; }
 
 							// render scene
